fix: change modal_visible to a modifier instead of its own block

--- a/blocks/modal/_visible/modal_visible.css
+++ b/blocks/modal/_visible/modal_visible.css
@@ -1,4 +1,4 @@
-.modal-visible { 
+.modal_visible { 
     display: flex;
     opacity: 1;
     transform: scale(1.0);
